--- a/aria2/aria2.conf
+++ b/aria2/aria2.conf
@@ -1,90 +1,144 @@
-# Aria2 配置文件
-# 需要保存在路径 ~/.aria2 之下
+################################ Aria2 配置文件 ################################
+#       需要保存为 ~/.aria2/aria2.conf                                         #
+#       或者在运行时通过 --conf-path 选项指定                                  #
+################################################################################
 
-# 允许rpc
+############################## RPC 以及安全性设置 ##############################
+# 启用 RPC 服务
 enable-rpc=true
-# 允许所有来源
+# 允许接受所有来源的 RPC 请求
 rpc-allow-origin-all=true
-# 允许非外部访问
+# 接受非本地请求
 rpc-listen-all=true
-# rpc 端口
+# RPC 服务所绑定的端口
 rpc-listen-port=6800
-# 不保存上传的种子/元数据文件
+# 不保存通过 RPC 上传的种子/元数据文件
 rpc-save-upload-metadata=false
+# rpc 密钥（旧的 rpc-user,passwd 已被废弃）
+# 在客户端需要附带此密钥才接受请求
+#rpc-secret=
 
-# rpc 密码(新特性, 旧的 rpc-user,passwd 已被抛弃)
-## rpc-secret=
-
-### 速度相关
-## 最大同时下载数(任务数), 路由建议值: 3
+##################################### 速度 #####################################
+# 最大并发下载量
 max-concurrent-downloads=5
-## 断点续传
-continue=true
-## 同服务器连接数
+# 一次下载任务最多向服务器同时建立的连接数
 max-connection-per-server=5
-##最小文件分片大小, 下载线程数上限取决于能分出多少片, 对于小文件重要
+# 最小文件分片大小, 下载线程数上限取决于能分出多少片, 对于小文件重要
 min-split-size=2M
-##单文件最大线程数, 路由建议值: 5
+# 单文件最大线程数
 split=4
-## 下载速度限制 0 不限制
+# 全局下载速度限制，0 表示不限制
 max-overall-download-limit=0
-## 单文件速度限制
+# 单文件下载速度限制
 max-download-limit=0
-## 上传速度限制
+# 上传速度限制
 max-overall-upload-limit=0
-## 单文件速度限制
+# 单文件上传速度限制
 max-upload-limit=0
-## 断开速度过慢的连接
+# 断开速度过慢的连接
 lowest-speed-limit=0
-## 验证用，需要1.16.1之后的release版本
-## referer=*
 
-### 进度保存相关
+################################# 进度保存相关 #################################
 input-file=~/.aria2/session.txt
 save-session=~/.aria2/session.txt
-# 定时保存会话，需要1.16.1之后的release版
+# 定时保存会话的时间间隔（秒），需要1.16.1之后的release版
 save-session-interval=60
-# 自动保存 .aria2 控制文件, 设为 0 取消
-auto-save-interval=0
+# 自动保存 .aria2 控制文件的时间间隔（秒）
+# 设为 0 则不会保存
+#auto-save-interval=
+# 当启动 aria2 时，是否从上次保存的会话继续下载
+continue=true
 
-### 磁盘相关
-# 文件保存路径, 默认为当前启动位置
+################################### 本地文件 ###################################
+# 下载文件保存路径, 默认为当前启动位置
 dir=/data/downloads
-# 文件缓存, 使用内置的文件缓存, 如果你不相信Linux内核文件缓存和磁盘内置缓存时使用, 需要1.16及以上版本
-disk-cache=0
-# 另一种Linux文件缓存方式, 使用前确保您使用的内核支持此选项, 需要1.15及以上版本
+# 磁盘缓存，需要 1.16 以上版本
+# 其作用是减少磁盘 IO 频率
+disk-cache=64M
+# 启用 mmap ，需要 1.15 以上版本
 enable-mmap=true
 # 文件预分配, 能有效降低文件碎片, 提高磁盘性能. 缺点是预分配时间较长
-# 所需时间 none < falloc ? trunc << prealloc, falloc和trunc需要文件系统和内核支持
-file-allocation=prealloc
+# none      不会进行预分配
+# prealloc  在下载前预分配
+# falloc    在下载前预分配，但不会阻塞；需要文件系统支持 posix_fallocate(3) 函数
+#           目前 ext4(extended) btrfs xfs ntfs(mingw built) 支持
+# trunc     让操作系统将对应文件截断至指定大小，但这是仅仅是修改文件系统元数据，
+#           而无法避免磁盘碎片
+# 所需时间 none < trunc < falloc << prealloc
+file-allocation=falloc
 
-### BT相关
+################################### HTTP设置 ###################################
+# 通过 HTTP(S) 下载时的 referer 头字段的设置
+# *     将下载地址作为 referer 头
+referer=*
+# 加载 cookies，支持以下三种格式：
+# - Firefox3 format (SQLite3)
+# - Chromium/Google Chrome (SQLite3)
+# - Mozilla/Firefox(1.x/2.x)/Netscape
+# 通常将此字段设置为浏览器所使用的 cookie 数据库文件
+# 需要 aria2 在编译时链接了 sqlite3 库
+#load-cookies=~/.aria2/cookies.sqlite
+# 用户身份，通常设置为浏览器使用的 User-Agent，以下载某些只允许浏览下载的网站
+# 可以在 https://github.com/fengzhizi715/user-agent-list 获取各浏览器使用的 UA
+user-agent='Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.77 Safari/537.36'
+
+#################################### BT相关 ####################################
+# 不将仅做种的任务计入总任务数限制
+bt-detach-seed-only=true
 # 启用本地节点查找
 bt-enable-lpd=true
-# 添加额外的tracker
-bt-tracker=http://104.238.198.186:8000/announce,http://1337.abcvg.info:80/announce,http://178.175.143.27:80/announce,http://78.30.254.12:2710/announce,http://87.110.238.140:6969/announce,http://[2001:1b10:1000:8101:0:242:ac11:2]:6969/announce,http://[2001:470:1:189:0:1:2:3]:6969/announce,http://[2a04:ac00:1:3dd8::1:2710]:2710/announce,http://aaa.army:8866/announce,http://atrack.pow7.com:80/announce,http://bt.pusacg.org:8080/announce,http://explodie.org:6969/announce,http://grifon.info:80/announce,http://h4.trakx.nibba.trade:80/announce,http://ns349743.ip-91-121-106.eu:80/announce,http://open.acgnxtracker.com:80/announce,http://opentracker.i2p.rocks:6969/announce,http://p4p.arenabg.com:1337/announce,http://pow7.com:80/announce,http://retracker.hotplug.ru:2710/announce,http://retracker.sevstar.net:2710/announce,http://retracker.spark-rostov.ru:80/announce,http://secure.pow7.com:80/announce,http://share.camoe.cn:8080/announce,http://t.acg.rip:6699/announce,http://t.overflow.biz:6969/announce,http://t1.leech.ie:80/announce,http://t1.pow7.com:80/announce,http://t2.leech.ie:80/announce,http://t2.pow7.com:80/announce,http://t3.leech.ie:80/announce,http://thetracker.org:80/announce,http://torrentsmd.com:8080/announce,http://tr.cili001.com:8070/announce,http://tr.kxmp.cf:80/announce,http://tracker.acgnx.se:80/announce,http://tracker.birkenwald.de:6969/announce,http://tracker.bittor.pw:1337/announce,http://tracker.bt4g.com:2095/announce,http://tracker.bz:80/announce,http://tracker.corpscorp.online:80/announce,http://tracker.dutchtracking.nl:80/announce,http://tracker.files.fm:6969/announce,http://tracker.gbitt.info:80/announce,http://tracker.gcvchp.com:2710/announce,http://tracker.ipv6tracker.ru:80/announce,http://tracker.kamigami.org:2710/announce,http://tracker.kuroy.me:5944/announce,http://tracker.lelux.fi:80/announce,http://tracker.moeking.me:6969/announce,http://tracker.opentrackr.org:1337/announce,http://tracker.skyts.net:6969/announce,http://tracker.trackerfix.com:80/announce,http://tracker.uw0.xyz:6969/announce,http://tracker.ygsub.com:6969/announce,http://tracker.yoshi210.com:6969/announce,http://tracker.zerobytes.xyz:1337/announce,http://tracker1.itzmx.com:8080/announce,http://tracker2.dler.org:80/announce,http://tracker2.itzmx.com:6961/announce,http://tracker3.itzmx.com:6961/announce,http://trun.tom.ru:80/announce,http://vps02.net.orel.ru:80/announce,http://www.loushao.net:8080/announce,http://www.wareztorrent.com:80/announce,http://www.yqzuji.com:80/announce,https://1337.abcvg.info:443/announce,https://2.tracker.eu.org:443/announce,https://3.tracker.eu.org:443/announce,https://aaa.army:8866/announce,https://opentracker.acgnx.se:443/announce,https://t1.leech.ie:443/announce,https://t2.leech.ie:443/announce,https://t3.leech.ie:443/announce,https://tk.mabo.ltd:443/announce,https://tracker.bt-hash.com:443/announce,https://tracker.gbitt.info:443/announce,https://tracker.lelux.fi:443/announce,https://tracker.nanoha.org:443/announce,https://tracker.nitrix.me:443/announce,https://tracker.sloppyta.co:443/announce,https://tracker.tamersunion.org:443/announce,https://w.wwwww.wtf:443/announce,udp://104.238.198.186:8000/announce,udp://107.150.14.110:6969/announce,udp://109.121.134.121:1337/announce,udp://114.55.113.60:6969/announce,udp://128.199.70.66:5944/announce,udp://151.80.120.114:2710/announce,udp://168.235.67.63:6969/announce,udp://178.33.73.26:2710/announce,udp://182.176.139.129:6969/announce,udp://185.5.97.139:8089/announce,udp://185.83.215.123:6969/announce,udp://185.86.149.205:1337/announce,udp://188.165.253.109:1337/announce,udp://191.101.229.236:1337/announce,udp://194.106.216.222:80/announce,udp://195.123.209.37:1337/announce,udp://195.123.209.40:80/announce,udp://208.67.16.113:8000/announce,udp://212.1.226.176:2710/announce,udp://212.47.227.58:6969/announce,udp://213.163.67.56:1337/announce,udp://37.19.5.155:2710/announce,udp://46.4.109.148:6969/announce,udp://5.79.249.77:6969/announce,udp://5.79.83.193:6969/announce,udp://51.254.244.161:6969/announce,udp://52.58.128.163:6969/announce,udp://62.138.0.158:6969/announce,udp://62.212.85.66:2710/announce,udp://74.82.52.209:6969/announce,udp://78.30.254.12:2710/announce,udp://85.17.19.180:80/announce,udp://89.234.156.205:80/announce,udp://9.rarbg.com:2710/announce,udp://9.rarbg.me:2710/announce,udp://9.rarbg.me:2780/announce,udp://9.rarbg.to:2710/announce,udp://9.rarbg.to:2730/announce,udp://91.216.110.52:451/announce,udp://91.218.230.81:6969/announce,udp://94.23.183.33:6969/announce,udp://95.211.168.204:2710/announce,udp://[2001:1b10:1000:8101:0:242:ac11:2]:6969/announce,udp://[2001:470:1:189:0:1:2:3]:6969/announce,udp://[2a03:7220:8083:cd00::1]:451/announce,udp://[2a04:ac00:1:3dd8::1:2710]:2710/announce,udp://[2a04:c44:e00:32e0:4cf:6aff:fe00:aa1]:6969/announce,udp://aaa.army:8866/announce,udp://bt.okmp3.ru:2710/announce,udp://bt1.archive.org:6969/announce,udp://bt2.54new.com:8080/announce,udp://bt2.archive.org:6969/announce,udp://chihaya.de:6969/announce,udp://chihaya.toss.li:9696/announce,udp://eddie4.nl:6969/announce,udp://exodus.desync.com:6969/announce,udp://inferno.demonoid.pw:3418/announce,udp://ipv4.tracker.harry.lu:80/announce,udp://ipv6.tracker.harry.lu:80/announce,udp://ipv6.tracker.zerobytes.xyz:16661/announce,udp://mgtracker.org:2710/announce,udp://open.demonii.com:1337/announce,udp://open.nyap2p.com:6969/announce,udp://open.stealth.si:80/announce,udp://opentor.org:2710/announce,udp://opentracker.i2p.rocks:6969/announce,udp://peerfect.org:6969/announce,udp://public.popcorn-tracker.org:6969/announce,udp://qg.lorzl.gq:2710/announce,udp://retracker.akado-ural.ru:80/announce,udp://retracker.baikal-telecom.net:2710/announce,udp://retracker.hotplug.ru:2710/announce,udp://retracker.lanta-net.ru:2710/announce,udp://retracker.netbynet.ru:2710/announce,udp://retracker.nts.su:2710/announce,udp://retracker.sevstar.net:2710/announce,udp://shadowshq.eddie4.nl:6969/announce,udp://shadowshq.yi.org:6969/announce,udp://thetracker.org:80/announce,udp://torrentclub.tech:6969/announce,udp://tr.bangumi.moe:6969/announce,udp://tr.cili001.com:8070/announce,udp://tracker-udp.gbitt.info:80/announce,udp://tracker.0o.is:6969/announce,udp://tracker.aletorrenty.pl:2710/announce,udp://tracker.army:6969/announce,udp://tracker.beeimg.com:6969/announce,udp://tracker.birkenwald.de:6969/announce,udp://tracker.bittor.pw:1337/announce,udp://tracker.coppersurfer.tk:6969/announce,udp://tracker.cyberia.is:6969/announce,udp://tracker.dler.org:6969/announce,udp://tracker.ds.is:6969/announce,udp://tracker.e-utp.net:6969/announce,udp://tracker.eddie4.nl:6969/announce,udp://tracker.ex.ua:80/announce,udp://tracker.filemail.com:6969/announce,udp://tracker.filepit.to:6969/announce,udp://tracker.flashtorrents.org:6969/announce,udp://tracker.fortu.io:6969/announce,udp://tracker.grepler.com:6969/announce,udp://tracker.halfchub.club:6969/announce,udp://tracker.iamhansen.xyz:2000/announce,udp://tracker.internetwarriors.net:1337/announce,udp://tracker.kamigami.org:2710/announce,udp://tracker.kuroy.me:5944/announce,udp://tracker.leechers-paradise.org:6969/announce,udp://tracker.lelux.fi:6969/announce,udp://tracker.moeking.me:6969/announce,udp://tracker.msm8916.com:6969/announce,udp://tracker.open-internet.nl:6969/announce,udp://tracker.openbittorrent.com:80/announce,udp://tracker.opentrackr.org:1337/announce,udp://tracker.piratepublic.com:1337/announce,udp://tracker.sbsub.com:2710/announce,udp://tracker.skyts.net:6969/announce,udp://tracker.swateam.org.uk:2710/announce,udp://tracker.teambelgium.net:6969/announce,udp://tracker.tiny-vps.com:6969/announce,udp://tracker.torrent.eu.org:451/announce,udp://tracker.torrentbay.to:6969/announce,udp://tracker.tvunderground.org.ru:3218/announce,udp://tracker.uw0.xyz:6969/announce,udp://tracker.yoshi210.com:6969/announce,udp://tracker.zerobytes.xyz:1337/announce,udp://tracker.zum.bi:6969/announce,udp://tracker1.itzmx.com:8080/announce,udp://tracker2.christianbro.pw:6969/announce,udp://tracker2.indowebster.com:6969/announce,udp://tracker2.itzmx.com:6961/announce,udp://tracker3.itzmx.com:6961/announce,udp://tracker4.itzmx.com:2710/announce,udp://u.wwwww.wtf:1/announce,udp://valakas.rollo.dnsabr.com:2710/announce,udp://www.loushao.net:8080/announce,udp://xxxtor.com:2710/announce,udp://zephir.monocul.us:6969/announce,udp://zer0day.ch:1337/announce,udp://zer0day.to:1337/announce
-# 单种子最大连接数
-bt-max-peers=55
-# 强制加密, 防迅雷必备
+# 强制加密, 拒绝旧 BT 协议握手，防迅雷必备
 bt-require-crypto=true
+# 在下载磁力链接时，先检查本地元数据缓存，如果不存在再向 DHT 请求
+bt-load-saved-metadata=true
+# 单种子最大连接数
+bt-max-peers=0
+# 通过磁力链接下载时，将元数据保存为 torrent 文件
+bt-save-metadata=true
+# 添加额外的tracker
+# https://trackerslist.com/all_aria2.txt 提供了大量可用 tracker 地址
+#bt-tracker=<uris>
+# 启用 DHT 网络
+enable-dht=true
+enable-dht6=true
+# dht 数据文件保存地址
+dht-file-path=~/.aria2/dht.dat
+dht-file-path6=~/.aria2/dht6.dat
 # 当下载的文件是一个种子(以.torrent结尾)时, 自动下载BT
 follow-torrent=true
-# 分离做种任务，不占用任务计数
-bt-detach-seed-only=true
-# BT监听端口, 当端口屏蔽时使用
-listen-port=6881-6999
-# aria2亦可以用于PT下载, 下载的关键在于伪装
-# 不确定是否需要，为保险起见，need more test
-enable-dht=true
-bt-enable-lpd=true
-enable-peer-exchange=false
-# 修改特征
-user-agent=uTorrent/2210(25130)
-peer-id-prefix=-UT2210-
-# 修改做种设置, 允许做种
+# BT监听端口, 当端口屏蔽时修改
+#listen-port=6881-6999
+# 设置全局最大 BT 上传速度
+max-overall-upload-limit=4M
+# BT 下载中，该端点名称前缀
+peer-id-prefix=A2-1-35-0-
+peer-agent=aria2/1.35.0
+# 分享率，当上传达到此比率则停止做种
 seed-ratio=2.0
-# 保存会话
-force-save=true
-bt-hash-check-seed=true
-bt-seed-unverified=true
-bt-save-metadata=true
+# 即便任务已完成或被移除，也保存 .aria2 控制文件，这对识别下载完成的种子很有帮助
+# 默认情况下，控制文件将在下载完成后删除
+force-save=false
+# 对于继续种子下载，通过检验和而非控制文件方式获取下载状态
+check-integrity=true
+
+################################### 事件钩子 ###################################
+#       事件钩子的参数都是一个指向 Bash 或批处理脚本文件的路径                 #
+#       当事件发生时，该脚本被调用并按顺序传入三个参数                         #
+#                                                                              #
+#       -   GID                                                                #
+#       -   文件数目                                                           #
+#       -   文件路径，如果有多个文件，则只会传递第一个，                       #
+#           要获取更多文件路径，需要 RPC                                       #
+################################################################################
+# 在 BT 下载完整（Hash 检查通过）后运行
+#on-bt-download-complete=
+# 在 HTTP(S) 和 FTP 下载完成后运行
+#on-download-complete=
+# 下载任务因错误而终止
+#on-download-error=
+# 下载任务被主动暂停
+#on-download-pause=
+# 下载任务开始前
+#on-download-start=
+# 下载任务结束后，可以作为 complete 和 error 两个事件的 fallback
+#on-download-stop=
